# power-system-roi

./: LICENSE  Makefile  README.md  package.json
backend/: .gitignore  pyproject.toml
backend/app/: dependency.py  main.py
backend/app/data/: caiso_lmp_rt_15min_zones_2023Q3.csv  caiso_lmp_rt_15min_zones_2023Q4.csv  caiso_lmp_rt_15min_zones_2024Q1.csv  caiso_lmp_rt_15min_zones_2024Q4.csv  combined_caiso_data.pkl
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
